<?xml version="1.0"?>
<package format="2">
  <name>iai_ringlight</name>
  <version>0.0.0</version>
  <description>The iai_ringlight package</description>

  <maintainer email="arrina@todo.todo">arrina</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <metapackage/>
  </export>
</package>
