<?xml version="1.0"?>
<package format="2">
    <name>iai_ringlight</name>
    <version>1.1.0</version>
    <description>The iai_ringlight package</description>

    <maintainer email="jeroen.schaefer@uni-bremen.de">Jeroen Schäfer</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <export>
        <metapackage/>
    </export>
</package>
