<?xml version="1.0"?>
<package format="2">
  <name>iai_ringlight_controller</name>
  <version>1.1.0</version>
  <description>The iai_ringlight_controller package</description>

  <maintainer email="jeroen.schaefer@uni-bremen.de">Jeroen Schäfer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>iai_ringlight_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>iai_ringlight_msgs</exec_depend>

  <export>
  </export>
</package>
